# timpani-akshay

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.CentOS.md  README.md  libbpf.cmake  test_workloads.sh
.github/: commit-message-instructions.md
.github/workflows/: build-container.yml  ci-dispatcher.yml  release.yml  run-doc.yml  run-license-check.yml  run-rust-ci.yml
doc/: README.md
doc/architecture/: grpc_architecture.md  timpani_architecture.md  timpani_rust_grpc_architecture.md
doc/architecture/HLD/: timpani_rust_grpc_architecture.md  timpani_system_design_document.md
doc/architecture/HLD/timpani-n/: 01-initialization-main.md  02-configuration-management.md  03-time-trigger-core.md  04-task-management.md  05-realtime-scheduling.md  06-signal-handling.md  07-ebpf-monitoring.md  08-communication-libtrpc.md  09-resource-management.md  10-data-structures.md  README.md
doc/architecture/HLD/timpani-o/: 01-schedinfo-service.md  02-fault-service-client.md  03-dbus-server-node-service.md  04-global-scheduler.md  05-hyperperiod-manager.md  06-node-configuration-manager.md  07-scheduler-utilities.md  08-data-structures.md  09-communication-protocols.md  10-error-handling.md  README.md
doc/architecture/LLD/timpani-n/: 01-initialization-main.md  02-configuration-management.md  03-time-trigger-core.md  04-task-management.md  05-realtime-scheduling.md  06-signal-handling.md  07-ebpf-monitoring.md  08-communication-libtrpc.md  09-resource-management.md  10-data-structures.md  README.md
doc/architecture/LLD/timpani-o/: 01-schedinfo-service.md  02-fault-service-client.md  03-dbus-server-node-service.md  04-global-scheduler.md  05-hyperperiod-manager.md  06-node-configuration-manager.md  07-scheduler-utilities.md  08-data-structures.md  09-communication-protocols.md  10-error-handling.md  README.md
doc/contribution/: coding-rule.md  guidelines-en.md
doc/docs/: api.md  developments.md  getting-started.md  release.md  structure.md
doc/features/: timpani_features.md
doc/features/requirements/: timpani_requirements.md
libtrpc/: CMakeLists.txt  README.md  aarch64-clang.cmake  aarch64-toolchain.cmake  armhf-toolchain.cmake
libtrpc/src/: libtrpc.h  peer_dbus.c  peer_dbus.h  serialize.c  serialize.h
libtrpc/test/: schedinfo.h  trpc_client.c  trpc_server.c
sample-apps/: README.md
sample-apps/src/: sample_apps.c  sched.c
scripts/: buildNparse.sh  clippy_check.sh  deny_check.sh  fmt_check.sh  installdeps.sh  license_check.sh  testNparse.sh  test_coverage.sh
scripts/gnuplot/: gantt-by-flow.fct  gantt-by-link.fct  gnuplot.sh  ttsched-cpu.gpi  ttsched.gpi
scripts/hooks/: post-checkout
src/: .clang-format  apex_monitor.c  cleanup.c  config.c  core.c  dbus_server.cpp  fault_client.h  global_scheduler.cpp  global_scheduler.h  globals.c  hyperperiod.c  hyperperiod_manager.cpp  internal.h  libttsched.h  libtttrace.h  main.c  main.cpp  node_config.cpp  sample_apps.c  sample_apps.h  sched.c  schedinfo.h  schedinfo_service.cpp  schedinfo_service.h  signal.c  task.c  timetrigger.c  timetrigger.h  trace.c  trace_bpf.c  trace_internal.c  trpc.c
test/: dummy_server.c  exprocs.c  schedinfo.yaml
tests/: CMakeLists.txt  test_dbus_server.cpp  test_fault_client.cpp  test_global_scheduler.cpp  test_schedinfo_service.cpp
time-trigger/: .gitmodules  CMakeLists.txt  README.Ubuntu20.md  bpf.cmake
time-trigger/scripts/mandata/: send_datas.sh
time-trigger/src/: apex_monitor.c  cleanup.c  internal.h  main.c  sigwait.bpf.c
timpani-n/: CMakeLists.txt  README.md  bpf.cmake  libbpf.cmake
timpani-n/scripts/perfetto/: perfetto.py
timpani-n/src/: globals.c  hyperperiod.c  sched.c  schedinfo.h  schedstat.bpf.c  trace_bpf.c  trace_bpf.h
timpani-n/test/: exprocs.h
timpani-o/: .editorconfig  CMakeLists.txt  README.md
timpani-o/.github/: copilot-instructions.md
timpani-o/src/: CMakeLists.txt  dbus_server.h  fault_client.cpp  fault_client.h  hyperperiod_manager.h  node_config.h  sched_info.h  schedinfo_service.h  scheduler_utils.cpp  scheduler_utils.h  task.h  tlog.h
timpani-o/tests/: test_node_config.cpp
timpani_rust/: .gitignore  Cargo.toml  DEVELOPER_NOTES.md  Justfile  README.md  about.hbs  test_output.json
timpani_rust/scripts/hooks/: pre-push
timpani_rust/test-tools/: Cargo.toml
timpani_rust/test-tools/workloads/: example_workload.yaml
timpani_rust/timpani-n/: Cargo.toml  README.md  build.rs
timpani_rust/timpani-n/proto/: node_service.proto
timpani_rust/timpani-n/src/: config.rs  context.rs  error.rs  lib.rs  main.rs
timpani_rust/timpani-n/src/config/: mod.rs
timpani_rust/timpani-n/src/context/: mod.rs
timpani_rust/timpani-n/src/error/: mod.rs
timpani_rust/timpani-n/src/grpc/: mod.rs
timpani_rust/timpani-n/src/proto/: mod.rs
timpani_rust/timpani-n/src/sched/: mod.rs
timpani_rust/timpani-n/src/signal/: mod.rs
timpani_rust/timpani-n/tests/: integration_tests.rs
timpani_rust/timpani-o/: Cargo.toml  build.rs
timpani_rust/timpani-o/proto/: node_service.proto
timpani_rust/timpani-o/src/: lib.rs  main.rs  task.rs
timpani_rust/timpani-o/src/config/: mod.rs
timpani_rust/timpani-o/src/fault/: mod.rs
timpani_rust/timpani-o/src/grpc/: mod.rs  node_service.rs  schedinfo_service.rs
timpani_rust/timpani-o/src/hyperperiod/: math.rs  mod.rs
timpani_rust/timpani-o/src/proto/: mod.rs
timpani_rust/timpani-o/src/scheduler/: error.rs  feasibility.rs  mod.rs
